// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render radio with label 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="radio-group-3-label"
      class="BaseBox-bmPWx xrMLB"
      data-blade-component="radio-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="radio-group-3-label"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eeqPab"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO gaMIEc"
              data-blade-component="text"
            >
              Select fruit
            </p>
            <div
              class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
              data-blade-component="visually-hidden"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </span>
      <div
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx xrMLB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx cCNoRc"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-1-helptext-2"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      name="radio-group-3"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 doUKpB"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Apple
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Radio /> should set disabled state with isDisabled 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="radio-group-10-label"
      class="BaseBox-bmPWx xrMLB"
      data-blade-component="radio-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="radio-group-10-label"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eeqPab"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO gaMIEc"
              data-blade-component="text"
            >
              Select fruit
            </p>
            <div
              class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
              data-blade-component="visually-hidden"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </span>
      <div
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx xrMLB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx cCNoRc"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="base-box"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="radio-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-11-helptext-12"
                      aria-disabled="true"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 hJscHc"
                      disabled=""
                      name="radio-group-10"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="RadioIconWrapperweb__RadioIconWrapper-sc-1memw5n-0 bpoWDC"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO cchetE"
                      data-blade-component="base-text"
                    >
                      Apple
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
